// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rule critics no possible opposite 1`] = `
Array [
  Object {
    "message": "no possible opposite",
    "result": "critics",
  },
]
`;

exports[`rule fixable 1`] = `
Array [
  Object {
    "message": "found one possible opposite. assigned.",
    "result": "fixable",
  },
]
`;

exports[`rule not throw 1 1`] = `Array []`;

exports[`rule throw belongsToMany one fixable opposite 1`] = `
Array [
  Object {
    "message": "found one possible opposite. assigned.",
    "result": "fixable",
  },
]
`;

exports[`rule throw regular more than one opposite 1`] = `Array []`;
